--- a/手册/规则编辑方法.md
+++ b/手册/规则编辑方法.md
@@ -1,484 +1,157 @@
 # 量化策略规则编辑手册
 
-本手册适用于策略规则配置，包括：
-- `score_ui.py` 中的"策略测试器（单条规则）"
-- `strategies_repo.py` 中的策略规则列表（RANKING_RULES, FILTER_RULES等）
-- `config.py` 中的 `SC_RULES` 配置（如使用）
-- 规则编辑器和语法检查器工具
+适用范围：`score_ui.py` 的“策略测试器（单条规则）/规则编辑辅助工具”，`strategies_repo.py` 中的各策略列表（RANKING/FILTER/OPPORTUNITY/POSITION/PREDICTION），以及 `config.py` 的 `SC_RULES`。规则语法兼容通达信风格，并结合本项目的指标/标签/模拟能力。
 
-## 目录
-- [1. 快速开始](#1-快速开始)
-- [2. 字段详解](#2-字段详解)
-- [3. 命中口径 (scope)](#3-命中口径-scope)
-- [4. 多子句组合 (clauses)](#4-多子句组合-clauses)
-- [5. 表达式语法](#5-表达式语法)
-- [6. 前置门槛 (gate/trigger/require)](#6-前置门槛-gatetriggerrequire)
-- [7. 实用示例](#7-实用示例)
-- [8. 最佳实践](#8-最佳实践)
-- [9. 模拟策略](#9-模拟策略)
-- [10. 持仓策略](#10-持仓策略)
-- [11. 规则编辑器工具](#11-规则编辑器工具)
-- [12. 策略语法检查器](#12-策略语法检查器)
-
----
-
-## 1. 快速开始
-
-### 最小可用模板
+## 1. 最小模板
 
 ```json
 {
-  "timeframe": "D",                // 可选，默认 "D"（日线）
-  "score_windows": 60,             // 可选，默认 60（用于计分判断的历史数据条数）
-  "when": "C > MA(C, 20)",         // [必填] TDX 风格表达式（或用clauses替代）
-  "scope": "ANY",                  // 可选，默认 "ANY"
-  "points": 0,                     // 可选：命中加/减分（默认 0）
-  "explain": "示例说明"             // 可选：规则说明文字
-}
-```
-
-**提示**：
-- `when` 字段是必填的（除非使用 `clauses`），其他字段都有合理的默认值
-- 可以用 `clauses` 替代 `when` 来实现多子句组合
-- **[重要]** `window` 字段已废弃，请使用 `score_windows` 字段
-
----
-
-## 2. 字段详解
-
-### 基础字段
-
-| 字段 | 类型 | 必填 | 说明 | 默认值 |
-|---|---|---|---|---|
-| `name` | str | [可选] | 规则名称，仅用于展示 | - |
-| `timeframe` | str | [可选] | 时间周期：`"D"`(日线) / `"W"`(周线) / `"M"`(月线) / `"60MIN"`(60分钟) | `"D"` |
-| `score_windows` | int | [可选] | 计分窗口条数（用于计分判断的历史数据条数） | `60` |
-| `when` | str | [必填]* | 条件表达式（TDX风格），*使用clauses时可省略 | - |
-| `scope` | str | [可选] | 命中口径（支持 `COUNT>=k` 和 `CONSEC>=m` 格式） | `"ANY"` |
-| `points` | number | [可选] | 命中时加/减分 | `0` |
-| `explain` | str | [可选] | 规则说明文字 | - |
-
-**注意**：`window` 字段已废弃，请使用 `score_windows` 字段。`window` 字段仅用于向后兼容，系统会自动转换为 `score_windows`。
-
-### 高级字段
-
-| 字段 | 类型 | 必填 | 说明 | 默认值 |
-|---|---|---|---|---|
-| `show_reason` | bool | [可选] | 是否纳入"理由"列表 | `true` |
-| `as` | str | [可选] | 分类标签：`"opportunity"`(机会) / `"highlight"`(高亮) / `"drawback"`(缺点) / `"auto"`(自动) | `"auto"` |
-| `gate` / `trigger` / `require` | str/dict/list | [可选] | 前置门槛条件（三个字段功能相同，只是字段名不同） | - |
-| `clauses` | list | [可选] | 多子句AND组合（可替代when字段） | - |
-| `dist_points` | list | [可选] | 距离分段给分（仅RECENT/DIST/NEAR使用） | - |
-
-**前置门槛字段说明**：
-- `gate`、`trigger`、`require` 三个字段功能完全相同，只是字段名不同
-- 支持三种格式：字符串表达式、子规则对象、子句数组
-- 可根据个人习惯选择使用哪个字段名
-
----
-
-## 3. 命中口径 (scope)
-
-### 3.1 基本口径
-
-| 口径 | 说明 | 示例场景 | 格式示例 |
-|---|---|---|---|
-| `LAST` | 仅看窗口内**最后一根**是否满足 | 今日是否突破 | `"LAST"` |
-| `ANY` | 窗口内**任意一根**满足即命中 | 近期是否有涨停 | `"ANY"` |
-| `ALL` | 窗口内**全部**满足才命中 | 连续上涨 | `"ALL"` |
-| `EACH` | 窗口内**每一根**满足都加分 | 每根阳线都加分 | `"EACH"` |
-| `COUNT>=k` | 窗口内满足的**次数**≥k | 近20天涨停≥3次 | `"COUNT>=3"` |
-| `CONSEC>=m` | 窗口内存在**连续m天**为True | 连续3天上涨 | `"CONSEC>=3"` |
-| `RECENT` | 最近一次命中距离分段给分 | 金叉越近分越高 | `"RECENT"`（需配合dist_points） |
-| `DIST` | 最近一次命中距离分段给分 | 金叉越近分越高 | `"DIST"`（需配合dist_points） |
-| `NEAR` | 最近一次命中距离分段给分 | 金叉越近分越高 | `"NEAR"`（需配合dist_points） |
-
-**格式说明**：
-- `COUNT>=k` 格式：k 为正整数，例如 `"COUNT>=3"` 表示至少满足3次
-- `CONSEC>=m` 格式：m 为正整数，例如 `"CONSEC>=3"` 表示至少连续3天满足
-- `RECENT`/`DIST`/`NEAR` 需要配合 `dist_points` 字段使用，根据距离分段给分
-
-### 3.2 连续子窗
-
-| 口径 | 说明 | 示例场景 |
-|---|---|---|
-| `ANY_n` | 长度为n的任意**连续子窗**中至少1天为True | 近10天中任意5天有1天满足 |
-| `ALL_n` | 长度为n的任意**连续子窗**中**每天**都为True | 近10天中任意5天都满足 |
-
-**注意**：以上口径均对 `when` 的布尔序列进行统计，缺失值会被处理为 `False`。
-
-### 3.3 最近命中打分 (RECENT/DIST/NEAR)
-
-当 `scope` 设为 `RECENT`、`DIST` 或 `NEAR` 时，系统会根据**最近一次命中的距离**来给分：
-
-- **距离计算**：最近一次 `when=True` 的位置距离窗口右端的K线数
-- **给分方式**：通过 `dist_points` 配置分段给分
-
-#### dist_points 配置格式
-
-```json
-// 方式1：区间三元组 [min, max, points]
-"dist_points": [[0,5,20], [6,10,10], [11,20,5]]
-
-// 方式2：显式对象 {min, max, points}
-"dist_points": [
-  {"min":0, "max":5, "points":20},
-  {"min":6, "max":10, "points":10},
-  {"min":11, "max":20, "points":5}
-]
-```
-
-**格式说明**：
-- 方式1：每个元素为 `[min, max, points]` 三元组，min和max为距离范围，points为给分
-- 方式2：每个元素为 `{min, max, points}` 对象，字段含义相同
-- min和max：最近一次命中的距离范围（K线数）
-- points：该距离范围内的给分（正数为加分，负数为减分）
-
-#### 实际示例
-
-```json
-{
-  "name": "金叉越近分越高",
   "timeframe": "D",
-  "score_windows": 25,
-  "scope": "RECENT",
-  "when": "CROSS(MA(C,5), MA(C,20))",
-  "dist_points": [[0,5,30], [6,20,20], [21,40,10]],
-  "explain": "5日线上穿20日线，越近给分越高"
+  "score_windows": 60,
+  "when": "C > MA(C, 20)",
+  "scope": "ANY",
+  "points": 0,
+  "explain": "示例说明"
 }
 ```
 
----
+- `when` 必填（除非用 `clauses`），`window` 字段已废弃，请用 `score_windows`。  
+- 可在 UI 的“规则编辑辅助工具”中生成模板并验证字段。
 
-## 4. 多子句组合 (clauses)
+## 2. 字段全览
 
-用于实现"跨周期 AND 组合"的复杂规则。
+| 字段 | 用途/说明 | 默认 |
+| --- | --- | --- |
+| `name` | 规则名称，仅用于展示/日志 | - |
+| `timeframe` | `"D"`/`"W"`/`"M"`/`"60MIN"` | `"D"` |
+| `score_windows` | 计分窗口长度 | `60` |
+| `when` | 主体表达式（TDX 语法） | - |
+| `scope` | 命中口径，见第 3 节 | `"ANY"` |
+| `points` | 命中时加减分（可为负） | `0` |
+| `explain` | 文字说明 | - |
+| `show_reason` | 是否纳入“理由”列表 | `true` |
+| `as` | 分类标签：`opportunity/highlight/drawback/auto` | `"auto"` |
+| `gate`/`trigger`/`require` | 前置门槛，三者等价，可写字符串/子规则/子句数组 | - |
+| `clauses` | 多子句 AND 组合，替代外层 `when` | - |
+| `dist_points` | 距离分段给分，仅配合 `RECENT/DIST/NEAR` | - |
+| `reason` | FILTER 用：命中原因描述 | - |
+| `hard_penalty` | FILTER 用：硬惩罚分 | - |
+| `check`/`scenario` | PREDICTION 用：表达式与虚拟日配置 | - |
 
-### 使用规则
+## 3. 命中口径（scope）
 
-1. **子句结构**：每个子句都是完整的规则对象，需要 `timeframe`、`score_windows`、`when`、`scope`
-2. **周期一致**：所有子句的 `timeframe` 和 `score_windows` 必须一致
-3. **逻辑合并**：系统会逐K进行AND合并，再根据 `scope` 统计命中
-4. **门槛支持**：可与 `gate`/`trigger`/`require` 联用，先判断门槛，再判断合并后的主体
-5. **替代when**：使用 `clauses` 时，外层规则不需要 `when` 字段
+| 口径 | 说明 | 场景 |
+| --- | --- | --- |
+| `LAST` | 仅看窗口最后一根 | 今日是否站上线 |
+| `ANY` | 任意一根为 True 即命中 | 近期是否有涨停 |
+| `ALL` | 窗口内全部 True | 连续上涨 |
+| `EACH` | 窗口内每根命中都加分 | 逐 K 加分 |
+| `COUNT>=k` | 命中次数≥k | 近20天涨停≥3次 |
+| `CONSEC>=m` | 存在连续 m 天 True | 连涨/连跌 |
+| `ANY_n` / `ALL_n` | 任意长度为 n 的子窗中，任意/全部命中 | “近10天任意5天” |
+| `RECENT`/`DIST`/`NEAR` | 最近一次命中距离分段给分，需 `dist_points` | 金叉越近分越高 |
 
-### 实际示例
+`dist_points` 写法：`[[min,max,points], ...]` 或 `[{ "min":0,"max":5,"points":20}, ...]`，距离单位为 K 线数。
+
+## 4. 多子句（clauses）
+
+- 每个子句都是完整规则：需 `timeframe/score_windows/when/scope`。  
+- 所有子句的周期与窗口必须一致，系统逐 K 做 AND，再按 `scope` 统计。  
+- 与 `gate/trigger/require` 可叠加；使用 `clauses` 时外层可不写 `when`。
+
+示例（跨周期组合）：
 
 ```json
 {
   "name": "日线突破+周线多头",
   "clauses": [
-    {
-      "timeframe": "D",
-      "score_windows": 40,
-      "when": "C > HHV(H,40) AND V > 1.5*MA(V,20)",
-      "scope": "ANY",
-      "explain": "日线放量突破40日高点"
-    },
-    {
-      "timeframe": "W", 
-      "score_windows": 20,
-      "when": "MA(C,5) > MA(C,10)",
-      "scope": "LAST",
-      "explain": "周线5日线上穿10日线"
-    }
-  ],
-  "points": 8,
-  "explain": "日线放量突破且周线均线多头排列"
-}
-```
-
-### 注意事项
-
-- **[不支持]** 在同一规则中混用不同的 `timeframe` 或 `score_windows`
-- **[支持]** 与 `gate`/`trigger`/`require` 联用，实现更复杂的条件判断
-- **[支持]** 每个子句独立的 `explain` 说明
-- **[重要]** 使用 `clauses` 时，外层规则不需要 `when` 字段
-
----
-
-## 5. 表达式语法
-
-### 5.1 基础变量（大小写不敏感）
-
-#### 价格成交量
-| 变量 | 说明 | 示例 |
-|---|---|---|
-| `C/Close` | 收盘价 | `C > MA(C,20)` |
-| `O/Open` | 开盘价 | `O > C` |
-| `H/High` | 最高价 | `H > HHV(H,20)` |
-| `L/Low` | 最低价 | `L < LLV(L,20)` |
-| `V/Vol` | 成交量 | `V > MA(V,20)` |
-| `AMOUNT` | 成交额 | `AMOUNT > 1000000` |
-
-#### 技术指标
-| 变量 | 说明 | 备注 |
-|---|---|---|
-| `J` | KDJ的J值 | 自动兜底计算 |
-| `VR` | 量比 | 按26日均量兜底 |
-| `z_slope` | 自定义指标 | 需存在于数据列 |
-| `bbi` | 自定义指标 | 需存在于数据列 |
-
-### 5.2 常用函数
-
-#### 统计函数
-```javascript
-// 移动平均
-MA(C, 20)           // 20日简单移动平均
-EMA(C, 12)          // 12日指数移动平均
-SMA(C, 20, 2)       // 20日平滑移动平均
-
-// 极值函数
-HHV(H, 20)          // 20日内最高价
-LLV(L, 20)          // 20日内最低价
-
-// 统计函数
-SUM(V, 5)           // 5日成交量总和
-STD(C, 20)          // 20日收盘价标准差
-COUNT(C>O, 10)      // 10日内阳线天数
-```
-
-#### 技术分析函数
-```javascript
-// 交叉函数
-CROSS(MA(C,5), MA(C,20))    // 5日线上穿20日线
-CROSS(MA(C,20), MA(C,5))    // 5日线下穿20日线
-
-// 引用函数
-REF(C, 1)           // 前一日收盘价
-BARSLAST(C>O)       // 距离上次阳线的天数
-
-// 安全除法
-SAFE_DIV(V, MA(V,20))       // 量比，避免除零错误
-```
-
-#### 排名函数
-```javascript
-// 时序排名
-TS_PCT(C, 20)       // 近20天收盘价分位数(0~1)
-TS_RANK(C, 20)      // 近20天收盘价排名(1~20)
-
-// 横截面排名
-RANK_VOL(100)       // 成交量在100只股票中的排名
-RANK_RET(100, 5)    // 5日收益率在100只股票中的排名
-```
-
-### 5.3 逻辑运算符
-
-#### 比较运算符
-```javascript
-> >= < <= == !=     // 标准比较运算符
-=                   // 自动转换为 ==
-```
-
-#### 逻辑运算符
-```javascript
-AND / &             // 逻辑与
-OR / |              // 逻辑或  
-NOT / ~             // 逻辑非
-```
-
-#### 多语句支持
-```javascript
-// 支持分号分隔的多语句
-HH := HHV(H, 20);
-VR := SAFE_DIV(V, MA(V, 20));
-SIG := (C > HH) AND (VR >= 1.5);
-```
-
-### 5.4 标签函数（与as规则联动）
-
-```javascript
-// 标签匹配
-ANY_TAG("突破|涨停", shift=0)        // 匹配包含"突破"或"涨停"的标签
-TAG_HITS("机会", shift=0)            // 返回"机会"标签的命中次数
-ANY_TAG_AT_LEAST("高亮", 2, shift=0) // 至少2个"高亮"标签
-
-// shift参数
-shift=0             // 当前日
-shift=1             // 昨日
-```
-
-**提示**：标签函数会在当前滚动窗口内对齐索引，并可读取通过 `as` 分类计算出的 `CUSTOM_TAGS`。
-
----
-
-## 6. 前置门槛 (gate/trigger/require)
-
-前置门槛用于在判断主体规则之前，先检查是否满足特定条件。
-
-### 字段说明
-
-`gate`、`trigger`、`require` 三个字段功能完全相同，只是字段名不同。可以根据个人习惯选择使用哪个字段名。
-
-### 使用规则
-
-1. **写法灵活**：可以是字符串表达式、子规则对象或子句数组
-2. **继承机制**：未指定 `timeframe/score_windows/scope` 时，会继承外层设置
-3. **默认scope**：门槛的 `scope` 默认为 `"LAST"`（只看最后一根K线）
-4. **执行流程**：先判断门槛，通过后再判断主体规则
-
-### 配置格式
-
-```json
-// 方式1：字符串表达式
-{
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "C > MA(C,20)",
-  "gate": "V > MA(V,20)",        // 前置条件：放量
-  "scope": "LAST",
-  "points": 10
-}
-
-// 方式2：子规则对象
-{
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "C > HHV(H,20)",
-  "gate": {
-    "when": "O > MA(C,20)",
-    "scope": "LAST"
-  },
-  "scope": "LAST",
-  "points": 15
-}
-
-// 方式3：子句数组
-{
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "CROSS(MA(C,5), MA(C,20))",
-  "gate": [
-    {"when": "V > MA(V,20)", "scope": "ANY"},
-    {"when": "C > MA(C,60)", "scope": "LAST"}
-  ],
-  "scope": "LAST",
-  "points": 20
-}
-```
-
-### 实际示例
-
-```json
-{
-  "name": "破趋势",
-  "timeframe": "D",
-  "score_windows": 2,
-  "when": "C <= duokong_long",
-  "gate": "O > duokong_long",     // 仅当当日高于趋势时，才认可"跌破"
-  "scope": "LAST",
-  "points": -20,
-  "explain": "跌破趋势线，但需确认当日曾高于趋势"
-}
-```
-
-### 使用trigger或require字段
-
-```json
-{
-  "name": "放量突破确认",
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "C > HHV(H,20)",
-  "trigger": "V > 2*MA(V,20)",    // 使用trigger字段（功能与gate相同）
-  "scope": "LAST",
-  "points": 20,
-  "explain": "放量突破20日高点"
-}
-```
-
-### 注意事项
-
-- **[支持]** 门槛通过：主体规则才会被评估和给分
-- **[不支持]** 门槛失败：主体规则直接跳过，不加分
-- **[继承机制]** 门槛会继承外层的 `timeframe` 和 `score_windows` 设置
-- **[提示]** 字段选择：`gate`、`trigger`、`require` 功能相同，可任意选择
-
----
-
-## 7. 实用示例
-
-### 7.1 基础技术指标
-
-#### 连续条件
-```json
-{
-  "name": "三连阳",
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "C > MA(C,20)",
-  "scope": "CONSEC>=3",
-  "points": 4,
-  "explain": "连续3天收盘站上MA20"
-}
-```
-
-#### 突破条件
-```json
-{
-  "name": "放量突破",
-  "timeframe": "D", 
-  "score_windows": 20,
-  "when": "C > HHV(H,20) AND V > 1.5*MA(V,20)",
-  "scope": "LAST",
-  "points": 15,
-  "explain": "放量突破20日高点"
-}
-```
-
-#### 金叉死叉
-```json
-{
-  "name": "均线金叉",
-  "timeframe": "D",
-  "score_windows": 25,
-  "when": "CROSS(MA(C,5), MA(C,20))",
-  "scope": "LAST",
-  "points": 10,
-  "explain": "5日线上穿20日线"
-}
-```
-
-#### COUNT格式示例
-```json
-{
-  "name": "近20天涨停≥3次",
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "C >= REF(C,1) * 1.095",
-  "scope": "COUNT>=3",
-  "points": 20,
-  "explain": "近20天内至少3次涨停"
-}
-```
-
-### 7.2 高级组合
-
-#### 跨周期组合
-```json
-{
-  "name": "日线突破+周线多头",
-  "clauses": [
-    {
-      "timeframe": "D",
-      "score_windows": 40,
-      "when": "C > HHV(H,40) AND V > 1.5*MA(V,20)",
-      "scope": "ANY"
-    },
-    {
-      "timeframe": "W",
-      "score_windows": 20, 
-      "when": "MA(C,5) > MA(C,10)",
-      "scope": "LAST"
-    }
+    {"timeframe":"D","score_windows":40,"when":"C>HHV(H,40) AND V>1.5*MA(V,20)","scope":"ANY","explain":"日线放量突破40日高点"},
+    {"timeframe":"W","score_windows":20,"when":"MA(C,5)>MA(C,10)","scope":"LAST","explain":"周线多头排列"}
   ],
   "points": 8,
   "explain": "日线放量突破且周线均线多头"
 }
 ```
 
-#### 距离分段给分
+## 5. 前置门槛（gate/trigger/require）
+
+- 三个字段等价，先判门槛再判主体；未显式指定周期/窗口时继承外层，默认 `scope="LAST"`。  
+- 写法：字符串、子规则对象、子句数组。可多层嵌套。
+
+示例（字符串门槛）：
+
+```json
+{
+  "timeframe": "D",
+  "score_windows": 20,
+  "when": "CROSS(MA(C,5), MA(C,20))",
+  "gate": "V > 2*MA(V,20)",
+  "scope": "LAST",
+  "points": 20
+}
+```
+
+示例（子句数组门槛）：
+
+```json
+{
+  "when": "C > duokong_long",
+  "gate": [
+    {"when": "V > MA(V,20)", "scope": "ANY"},
+    {"when": "O > duokong_long", "scope": "LAST"}
+  ],
+  "scope": "LAST",
+  "points": -10,
+  "explain": "放量+曾站上趋势才认定跌破"
+}
+```
+
+## 6. 表达式与函数
+
+- 价格/量别名：`O/H/L/C/V/AMOUNT`；DataFrame 数值列自动注入上下文，大小写不敏感。  
+- 常用函数：`MA/EMA/SMA/HHV/LLV/SUM/STD/COUNT/CROSS/REF/BARSLAST/SAFE_DIV/ABS/MAX/MIN/IF`。  
+- 排名/百分位：`TS_RANK(x,n)`、`TS_PCT(x,n)`。  
+- 标签：`ANY_TAG(pattern, shift=0)`、`TAG_HITS(pattern, shift=0)`、`ANY_TAG_AT_LEAST(pattern,k,shift=0)`；`YDAY_` 前缀取昨日。  
+- DIFF/KDJ 工具：`GET_LAST_DIFF_HIGH_PRICE`、`GET_LAST_DIFF_HIGH_VALUE`、`REVERSE_PRICE_TO_DIFF`、`FIND_LAST_LOWEST_J`、`GET_LAST_CONDITION_PRICE`。  
+- 多语句：用分号 `;` 赋值：`HH:=HHV(H,20); SIG:=(C>HH) AND V>MA(V,20); SIG;`
+
+## 7. 指标与数据列
+
+- 注册指标见 `indicators.py:REGISTRY`：`kdj(j)`、`volume_ratio(vr)`、`volume_ratio_prev(vr_prev)`、`bbi(bbi)`、`rsi(rsi)`、`DIFF(diff)` 等。  
+- 解析时自动扫描表达式提取所需输出列；TDX 计算失败自动回退 Python，前 `warmup` 行置 `None`，并按 `out` 小数位 round。  
+- 自定义列：若数据源有自定义列（如 `z_slope`、`bbi`），直接写列名或别名即可被注入。
+
+## 8. 常用策略示例
+
+### 排名/筛选（score_ui → RANKING/FILTER）
+
+```json
+{
+  "name": "放量突破",
+  "timeframe": "D",
+  "score_windows": 20,
+  "when": "C > HHV(H,20) AND V > 1.5*MA(V,20)",
+  "scope": "LAST",
+  "points": 15,
+  "explain": "放量突破20日高点",
+  "as": "opportunity"
+}
+```
+
+```json
+{
+  "name": "近20天涨停≥3次",
+  "timeframe": "D",
+  "score_windows": 20,
+  "when": "C >= REF(C,1)*1.095",
+  "scope": "COUNT>=3",
+  "points": 20,
+  "explain": "至少3次涨停"
+}
+```
+
+### 距离打分（RECENT/DIST/NEAR）
+
 ```json
 {
   "name": "金叉越近分越高",
@@ -486,178 +159,36 @@ shift=1             // 昨日
   "score_windows": 25,
   "when": "CROSS(MA(C,5), MA(C,20))",
   "scope": "RECENT",
-  "dist_points": [[0,5,30], [6,20,20], [21,40,10]],
-  "explain": "5日线上穿20日线，越近给分越高"
+  "dist_points": [[0,5,30],[6,20,20],[21,40,10]],
+  "explain": "越近分越高"
 }
 ```
 
-#### 前置门槛（使用gate）
+### 逐 K 累加
+
 ```json
-{
-  "name": "放量突破确认",
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "C > HHV(H,20)",
-  "gate": "V > 2*MA(V,20)",        // 前置条件：放量2倍以上
-  "scope": "LAST",
-  "points": 20,
-  "explain": "放量突破20日高点"
-}
+{"name":"每根阳线加分","timeframe":"D","score_windows":10,"when":"C>O","scope":"EACH","points":2}
 ```
 
-#### 前置门槛（使用trigger）
+### 标签联动
+
 ```json
-{
-  "name": "突破确认",
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "C > MA(C,20)",
-  "trigger": "V > MA(V,20)",       // 使用trigger字段（功能与gate相同）
-  "scope": "LAST",
-  "points": 15,
-  "explain": "放量站上20日均线"
-}
+{"name":"机会标签联动","timeframe":"D","score_windows":20,"when":"ANY_TAG('突破|涨停',shift=0) AND C>MA(C,20)","scope":"ANY","points":15,"as":"opportunity"}
 ```
 
-### 7.3 特殊场景
-
-#### 逐K加权
-```json
-{
-  "name": "日内加权",
-  "timeframe": "D",
-  "score_windows": 10,
-  "when": "C > O",                  // 阳线
-  "scope": "EACH",                  // 每个阳线都加分
-  "points": 2,
-  "explain": "每根阳线加2分"
-}
-```
-
-#### 标签联动
-```json
-{
-  "name": "机会标签联动",
-  "timeframe": "D",
-  "score_windows": 20,
-  "when": "ANY_TAG('突破|涨停', shift=0) AND C > MA(C,20)",
-  "scope": "ANY",
-  "points": 15,
-  "as": "opportunity",
-  "explain": "有突破或涨停标签且站上20日线"
-}
-```
-
----
-
-## 8. 最佳实践
-
-### 推荐做法
-
-1. **合理设置窗口**：根据策略特点选择合适的 `score_windows` 大小（通常5-100）
-2. **使用说明文字**：为每个规则添加清晰的 `explain` 说明
-3. **分类标签**：使用 `as` 字段对规则进行分类管理
-4. **安全除法**：使用 `SAFE_DIV` 避免除零错误
-5. **前置门槛**：复杂条件使用 `gate`/`trigger`/`require` 进行分层判断
-6. **使用新字段**：使用 `score_windows` 而不是已废弃的 `window` 字段
-7. **使用规则编辑器**：优先使用可视化编辑器创建规则，减少手写错误
-
-### 避免事项
-
-1. **混用周期**：多子句中不要混用不同的 `timeframe` 或 `score_windows`
-2. **过度复杂**：避免过于复杂的表达式，影响可读性
-3. **硬编码数值**：尽量使用参数化的指标计算
-4. **忽略异常**：注意处理数据缺失和异常值
-5. **使用废弃字段**：避免使用已废弃的 `window` 字段，应使用 `score_windows`
-6. **缺少验证**：创建规则后应使用语法检查器验证配置正确性
-
-### 调试技巧
-
-1. **分步测试**：复杂规则可以拆分成多个简单规则测试
-2. **查看日志**：利用系统日志了解规则执行情况
-3. **验证数据**：确保使用的指标列在数据中存在
-4. **测试边界**：测试规则在边界条件下的表现
-5. **使用工具**：利用规则编辑器的验证和解释功能
-
----
-
-## 9. 模拟策略
-
-模拟策略用于生成"明日"的虚拟K线数据，支持多种价格模式和成交量模式。
-
-### 9.1 价格模式 (mode)
-
-| 模式 | 说明 | 开盘价 | 收盘价 | 适用场景 |
-|---|---|---|---|---|
-| `close_pct` | 收盘涨跌 | 昨收 | 昨收×(1+pct%) | 普通涨跌 |
-| `open_pct` | 开盘涨跌 | 昨收×(1+pct%) | 昨收 | 跳空开盘 |
-| `gap_then_close_pct` | 跳空+收盘涨跌 | 昨收×(1+gap_pct%) | 开×(1+pct%) | 跳空后继续 |
-| `flat` | 平盘 | 昨收 | 昨收 | 横盘整理 |
-| `limit_up` | 涨停 | 昨收×(1+limit_up_pct%) | 昨收×(1+limit_up_pct%) | 涨停板 |
-| `limit_down` | 跌停 | 昨收×(1+limit_dn_pct%) | 昨收×(1+limit_dn_pct%) | 跌停板 |
-
-#### 价格参数
+### 买点/持仓（OPPORTUNITY/POSITION）
 
 ```json
 {
-  "pct": 2.0,                    // 涨跌幅百分比
-  "gap_pct": -0.5,               // 跳空百分比
-  "limit_up_pct": 9.9,           // 涨停幅度（默认9.9%）
-  "limit_dn_pct": -9.9,          // 跌停幅度（默认-9.9%）
-  "lock_higher_than_open": true, // 强制收盘≥开盘
-  "lock_inside_day": true        // 强制H/L包住O/C
+  "name": "止盈—浮盈≥20%且回落",
+  "when": "UNREAL_PNL >= 0.2 AND CLOSE < MA(CLOSE,5)",
+  "explain": "浮盈≥20%回撤至5日线下"
 }
 ```
 
-### 9.2 高低点生成 (hl_mode)
+买点可选择：按日期取价 / 从 `OPPORTUNITY_POLICIES` 取价 / 手动输入；持仓可勾选“基于明日虚拟日检查”复用模拟场景。
 
-| 模式 | 说明 | 参数 | 适用场景 |
-|---|---|---|---|
-| `follow` | 跟随昨日结构 | - | 保持相对振幅结构 |
-| `atr_like` | ATR类振幅 | `atr_mult` | 基于历史振幅 |
-| `range_pct` | 固定百分比振幅 | `range_pct` | 固定振幅范围 |
-
-#### 高低点参数
-
-```json
-{
-  "hl_mode": "atr_like",
-  "atr_mult": 1.2,               // ATR倍数（1.0=昨振幅，2.0=放大一倍）
-  "range_pct": 2.0               // 固定振幅百分比
-}
-```
-
-### 9.3 成交量模式 (vol_mode)
-
-| 模式 | 说明 | 参数 | 计算公式 |
-|---|---|---|---|
-| `same` | 保持不变 | - | V = 昨量 |
-| `pct` | 百分比变化 | `vol_arg` | V = 昨量×(1+vol_arg%) |
-| `mult` | 倍数变化 | `vol_arg` | V = 昨量×vol_arg |
-
-#### 成交量参数
-
-```json
-{
-  "vol_mode": "mult",
-  "vol_arg": 1.5                 // 1.5倍成交量
-}
-```
-
-### 9.4 其他参数
-
-```json
-{
-  "warmup_days": 80,             // 历史窗口基准天数
-  "PerStockOverride": {          // 个股特殊设置
-    "000001": {
-      "limit_up_pct": 5.0        // ST股5%涨跌停
-    }
-  }
-}
-```
-
-### 9.5 完整示例
+### 模拟（PREDICTION）
 
 ```json
 {
@@ -665,264 +196,46 @@ shift=1             // 昨日
   "check": "HH:=HHV(H,20); VR:=SAFE_DIV(V,MA(V,20)); SIG:=(C>HH) AND (VR>=1.5);",
   "scenario": {
     "mode": "gap_then_close_pct",
-    "gap_pct": -0.5,             // 先跳空-0.5%
-    "pct": 2.0,                  // 再涨2%
+    "gap_pct": -0.5,
+    "pct": 2.0,
     "hl_mode": "atr_like",
-    "atr_mult": 1.2,             // 振幅1.2倍
+    "atr_mult": 1.2,
     "vol_mode": "mult",
-    "vol_arg": 1.5,              // 成交量1.5倍
+    "vol_arg": 1.5,
     "lock_higher_than_open": true,
     "warmup_days": 80
   }
 }
 ```
 
-**生成逻辑**：
-- 开盘：昨收×(1-0.5%) = 跳空低开
-- 收盘：开盘×(1+2%) = 低开高走
-- 高低点：昨振幅×1.2，围绕(O+C)/2对称展开
-- 成交量：昨量×1.5倍
-- 约束：收盘≥开盘，H/L包住O/C
+## 9. 最佳实践
 
----
+1. 窗口/周期一致：多子句不混用不同 `timeframe/score_windows`。  
+2. 分层思路：复杂条件用 `gate/trigger/require` 先筛，再判主体；避免巨长单句。  
+3. 安全除法：用 `SAFE_DIV` 避免除零；边界数据注意空值。  
+4. 说明齐全：`name/explain` 填好，方便日志与 UI；标签用 `as` 管理。  
+5. 废弃字段：不要再用 `window`。  
+6. 工具优先：写完规则先在规则编辑器验证，再跑语法检查器；缺列/语法问题会有提示。  
+7. 指标管理：新增指标必须注册到 `indicators.py`，设置 warmup 与精度；数据不够 warmup 时前段会置空。  
+8. 调试技巧：拆小规则逐个验证；查看日志；在表达式中直接计算指标以减少列依赖。
+9. 数据前置：规则依赖的行情/指标列来自 `download.py` 下载及指标计算（支持自动 warmup）；缺列时要么补抓数据要么在表达式中现场计算。
 
-## 10. 持仓策略
+## 10. 常见问题
 
-持仓策略用于判断已持有股票的买卖时机，支持止损、止盈、加仓等操作。
+- **表达式报列不存在**：确保列已在数据源或指标注册表中；或在表达式中现场计算。  
+- **scope 无效**：检查格式是否为 `COUNT>=k`/`CONSEC>=m`，参数必须为正整数；距离类需 `dist_points`。  
+- **门槛不生效**：确认写在 `gate/trigger/require` 中，默认 `scope="LAST"`，必要时显式声明。  
+- **早期样本异常**：指标有 warmup 遮挡，前几行可能为 `None`；策略窗口需覆盖有效数据段。  
+- **性能问题**：减少不必要的指标列，合并条件；复用场景缓存（predict_core）。
 
-### 10.1 可用变量
+## 11. 工具
 
-#### 价格成交量
-| 变量 | 说明 | 示例 |
-|---|---|---|
-| `OPEN/HIGH/LOW/CLOSE` | 开高低收 | `CLOSE > MA(CLOSE,20)` |
-| `V` | 成交量 | `V > MA(V,20)` |
+- **规则编辑器**（`score_ui.py` → “规则编辑辅助工具”）：可视化配置、字段校验、表达式检查、生成 JSON、规则解释，支持 RANKING/FILTER/PREDICTION/POSITION/OPPORTUNITY。  
+- **策略语法检查器**：自动扫描 `strategies_repo.py`，校验必填字段、类型、scope/dist_points 格式、表达式、缺失列、废弃字段，输出错误/警告/建议。
 
-#### 环境变量
-| 变量 | 说明 | 示例 |
-|---|---|---|
-| `TS` | 股票代码 | `TS == "000001"` |
-| `REF_DATE` | 判定目标日 | 用于日志记录 |
+## 12. 近期更新
 
-#### 持仓相关
-| 变量 | 说明 | 计算公式 |
-|---|---|---|
-| `ENTRY_PRICE` | 买入价格 | 用户输入或策略取价 |
-| `UNREAL_PNL` | 浮盈比例 | `(CLOSE-ENTRY_PRICE)/ENTRY_PRICE` |
-
-**虚拟日支持**：勾选"基于明日虚拟日检查"时，会先合成明日K线再判定
-
-### 10.2 表达式语法
-
-支持TDX风格的布尔表达式和多语句：
-
-```javascript
-// 简单布尔表达式
-CLOSE < MA(CLOSE,10)
-
-// 多语句表达式
-MA5 := MA(CLOSE,5);
-MA20 := MA(CLOSE,20);
-SIG := CROSS(MA5, MA20) AND V > MA(V,20);
-```
-
-### 10.3 指标重算
-
-在UI中可选择指标重算方式：
-- **全部重算**：重算所有已注册指标
-- **自选重算**：只重算指定的指标
-- **不重算**：只使用历史基础列
-
-**建议**：在表达式中现场计算指标，避免依赖列数据
-
-### 10.4 策略配置示例
-
-```json
-POSITION_POLICIES = [
-    {
-        "name": "止损—跌破10日线",
-        "when": "CLOSE < MA(CLOSE,10)",
-        "explain": "收盘跌破10日均线"
-    },
-    {
-        "name": "止盈—浮盈≥20%且回落",
-        "when": "UNREAL_PNL >= 0.2 AND CLOSE < MA(CLOSE,5)",
-        "explain": "浮盈≥20%回撤至5日线下"
-    },
-    {
-        "name": "固定止损−8%",
-        "when": "SAFE_DIV(CLOSE-ENTRY_PRICE, ENTRY_PRICE) <= -0.08",
-        "explain": "相对买点回撤8%触发"
-    },
-    {
-        "name": "加仓信号—放量站上20日",
-        "when": "CROSS(MA(CLOSE,5), MA(CLOSE,20)) AND SAFE_DIV(V, MA(V,20)) >= 1.5",
-        "explain": "5上20且量比≥1.5"
-    }
-]
-```
-
-### 10.5 买点来源
-
-支持三种买点设置方式：
-
-1. **按日期取价**：从指定日期的开收高低中选择
-2. **策略取价**：从 `OPPORTUNITY_POLICIES` 中获取
-3. **手动输入**：用户直接指定价格
-
-### 10.6 虚拟日场景
-
-虚拟日场景使用与模拟策略相同的 `Scenario` 字段：
-
-```json
-{
-  "scenario": {
-    "mode": "gap_then_close_pct",
-    "gap_pct": -0.5,
-    "pct": 2.0,
-    "hl_mode": "atr_like",
-    "atr_mult": 1.2,
-    "vol_mode": "mult",
-    "vol_arg": 1.5
-  }
-}
-```
-
-### 10.7 输出结果
-
-系统会输出以下信息：
-- `name`：策略名称
-- `hit`：是否触发
-- `explain`：触发说明
-- `entry_price`：买入价格
-- `unreal_pnl`：浮盈比例
-- `ref_date`：参考日期
-- `sim_date`：模拟日期
-
----
-
----
-
-## 11. 规则编辑器工具
-
-系统提供了可视化的规则编辑器工具（在 `score_ui.py` 的"规则编辑辅助工具"标签页），可以：
-
-### 11.1 功能特性
-
-- **可视化配置**：通过界面配置规则，无需手写JSON
-- **策略类型支持**：支持排名、筛选、模拟、持仓、买点五种策略类型
-- **字段验证**：自动验证字段类型和必填字段
-- **表达式检查**：检查TDX表达式的语法正确性
-- **配置生成**：自动生成符合规范的JSON配置
-- **规则解释**：自动解释规则逻辑和数据需求
-
-### 11.2 支持的字段
-
-#### 排名策略 (ranking)
-- 基础字段：`name`, `timeframe`, `score_windows`, `scope`, `points`, `explain`
-- 高级字段：`show_reason`, `as`, `gate`/`trigger`/`require`, `clauses`, `dist_points`
-
-#### 筛选策略 (filter)
-- 基础字段：`name`, `timeframe`, `score_windows`, `scope`, `reason`, `hard_penalty`
-- 高级字段：`gate`/`trigger`/`require`, `clauses`
-
-#### 模拟策略 (prediction)
-- 字段：`name`, `check`, `scenario`
-
-#### 持仓策略 (position)
-- 字段：`name`, `when`, `explain`
-
-#### 买点策略 (opportunity)
-- 字段：`name`, `when`, `explain`
-
-### 11.3 使用建议
-
-1. **使用规则编辑器**：优先使用可视化编辑器创建规则，减少手写错误
-2. **验证规则**：使用"验证规则"功能检查配置正确性
-3. **查看解释**：利用"规则解释"功能理解规则逻辑
-4. **导出配置**：生成配置后可直接复制到策略文件中使用
-
----
-
-## 12. 策略语法检查器
-
-策略语法检查器用于自动检查策略文件的语法错误、字段有效性、表达式正确性等。
-
-### 12.1 功能特性
-
-- **自动文件定位**：自动扫描并定位策略文件（strategies_repo.py）
-- **Python语法检查**：验证Python文件语法正确性
-- **字段验证**：检查必填字段和字段类型
-- **表达式检查**：检查TDX表达式的语法正确性
-- **指标检查**：验证指标依赖关系
-- **缺失检查**：检查缺失的数据列和指标
-
-### 12.2 支持的策略类型
-
-- 排名策略 (ranking)
-- 筛选策略 (filter)
-- 模拟策略 (prediction)
-- 持仓策略 (position)
-- 买点策略 (opportunity)
-
-### 12.3 检查内容
-
-- Python文件语法正确性
-- 策略列表结构正确性（RANKING_RULES, FILTER_RULES等）
-- 每个规则的字段和表达式
-- 必填字段完整性（when/check字段）
-- 字段类型正确性（score_windows, points等）
-- 表达式语法正确性
-- 支持的函数和变量
-- 缺失的数据列和指标
-- scope格式验证（COUNT>=k, CONSEC>=m等）
-- dist_points格式验证
-- gate/trigger/require字段验证
-
-### 12.4 验证结果
-
-检查器会返回以下信息：
-
-- **验证状态**：通过或失败
-- **错误信息**：必填字段缺失、字段类型错误、表达式错误等
-- **警告信息**：使用废弃字段、字段值异常等
-- **改进建议**：添加name/explain字段、使用SAFE_DIV等
-- **缺失资源**：缺失的数据列和指标列表
-- **语法问题**：表达式语法问题列表
-
-### 12.5 使用建议
-
-1. **定期检查**：修改策略文件后应使用检查器验证
-2. **查看警告**：注意警告信息，及时修复潜在问题
-3. **遵循建议**：参考改进建议优化规则配置
-4. **检查缺失**：确保使用的指标和数据列存在
-
----
-
-## 总结
-
-本手册涵盖了量化策略规则编辑的完整流程：
-
-1. **基础规则**：从最小模板到复杂组合
-2. **字段详解**：所有支持字段的详细说明
-3. **命中口径**：多种统计和判断方式（包括COUNT和CONSEC格式）
-4. **多子句组合**：跨周期AND组合的复杂规则
-5. **表达式语法**：TDX兼容的函数和操作符
-6. **前置门槛**：gate/trigger/require三种字段支持
-7. **实用示例**：各种场景的配置示例
-8. **最佳实践**：推荐做法和避免事项
-9. **模拟策略**：虚拟K线生成
-10. **持仓策略**：买卖时机判断
-11. **规则编辑器**：可视化配置工具
-12. **语法检查器**：自动验证策略配置
-
-### 重要更新
-
-- **[重要]** 字段更新：`window` 字段已废弃，请使用 `score_windows` 字段
-- **[新增]** 新字段支持：`gate`/`trigger`/`require` 三个字段功能相同，可根据习惯选择
-- **[新增]** scope格式：支持 `COUNT>=k` 和 `CONSEC>=m` 格式，k和m为正整数
-- **[新增]** 工具支持：提供可视化规则编辑器工具和策略语法检查器
-- **[完善]** dist_points：支持区间三元组和显式对象两种格式
-- **[完善]** clauses：使用clauses时可省略外层when字段
-
-通过合理使用这些功能，可以构建出强大的量化交易策略系统。
+- `score_windows` 取代 `window`。  
+- `gate/trigger/require` 等价，可任选；`scope` 新增 `COUNT>=k`、`CONSEC>=m`、`RECENT/DIST/NEAR`、`ANY_n/ALL_n`。  
+- `dist_points` 支持三元组或对象；标签函数支持自定义标签系列 `CUSTOM_TAGS`。  
+- 指标注册增加 warmup 与精度控制，TDX 失败自动回退 Python。***
